# mysoc

./: .env.example  .gitignore  AGENTS.md  AGENTS_STATE.md  ARCHITECTURE_REPORT.md  Dockerfile  REACT_MIGRATION_PLAN.md  README.md  docker-compose.yml  logstash.conf  pyproject.toml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py
app/db/: init_db.py  session.py
app/pipeline/: __init__.py
app/pipeline/inputs/: __init__.py  syslog.py
app/pipeline/outputs/: __init__.py  database.py  enrichment.py  realtime.py
app/pipeline/processors/: __init__.py  syslog.py
app/services/: classifier.py  enrichment.py  ingestion.py  ollama.py  parser.py  realtime.py
app/static/: index.html
app/static/css/: app.css
app/static/js/: app.js
app/static/react/: index.html
app/static/react/assets/: index-BhqJWftA.js  index-C74s0jl5.css
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: styles.css
frontend/src/app/: App.tsx  AppShell.tsx  ErrorBoundary.tsx
frontend/src/features/ai/: AiPanel.tsx
frontend/src/features/config/: ConfigPanel.tsx
frontend/src/features/map/: MapGraphPanel.tsx
frontend/src/features/overview/: OverviewPanel.tsx
frontend/src/features/timeline/: TimelinePanel.tsx
frontend/src/lib/: timeScope.ts
nginx/: nginx.conf
scripts/: backfill_unifi_logs.py  dev.sh  download_dbip_lite.sh
tests/: test_dashboard_time_scope.py  test_frontend_preview.py  test_graph_api.py  test_ingestion_pipeline.py  test_proxy_config.py  test_realtime_websocket.py  test_timeline_api.py
(+3 files in other folders)
