[project]
name = "mysoc"
version = "0.1.0"
description = "Local forensic pfSense analysis platform with FastAPI, PostgreSQL/TimescaleDB, and a dark SPA UI."
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.21.0",
  "asyncpg>=0.30.0",
  "countryinfo>=0.1.2",
  "fastapi>=0.116.0",
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "maxminddb>=2.8.2",
  "orjson>=3.11.0",
  "pydantic-settings>=2.11.0",
  "python-dateutil>=2.9.0.post0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.43",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "asgi-lifespan>=2.1.0",
  "playwright>=1.55.0",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
